--- a/assets/scss/layout/_l-date.scss
+++ b/assets/scss/layout/_l-date.scss
@@ -98,6 +98,8 @@
       padding: 30px 40px;
       color: $palette-white;
       font-weight: bold;
+      max-width: 380px;
+      margin: auto;
       .pickup{
         font-size: 18px;
         text-align: center;
