--- a/assets/scss/layout/_l-layout.scss
+++ b/assets/scss/layout/_l-layout.scss
@@ -15,7 +15,7 @@ body {
   -webkit-text-size-adjust: 100%;
   word-wrap: break-word;
   letter-spacing: 0.2em;
-  background-color: $palette-yellow;
+/*  background-color: $palette-yellow;*/
   &.appear {
     background: #f0f0f0;
   }
@@ -23,7 +23,7 @@ body {
 
 main {
   background-color: $palette-white;
-  max-width: 1480px;
+/*  max-width: 1480px;*/
   margin: auto;
   position: relative;
 }
@@ -110,4 +110,92 @@ footer {
   @include mq(sp) {
     display: block !important;
   }
+}
+
+.ouro {
+  z-index: 11000;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  position: fixed;
+  display:inline-block;
+  height: 46px;
+  width: 46px;
+  margin: 1em;
+  border-radius: 50%;  
+  background: none repeat scroll 0 0 #DDDDDD; /* ベースの色 - 可変 */
+  overflow:hidden;
+  box-shadow: 0 0 10px rgba(0,0,0,.1) inset, 0 0 25px rgba(0,0,255,0.075);
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 9px; left: 9px;
+    display: block;
+    height: 28px; width: 28px;
+    background: none repeat scroll 0 0 #F2F2F2;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0,0,0,.1);
+  }
+  span {
+    position: absolute;
+    height: 100%; width: 50%;
+    overflow: hidden;
+  }
+  .left  { left:0   }
+  .right { left:50% }
+  .anim {
+    position: absolute;
+    left: 100%; top: 0;
+    height: 100%; width: 100%;
+    border-radius: 999px;
+    background: none repeat scroll 0 0 Tomato; /* Ouroborosの色 - 可変 */
+    opacity: 0.8;
+    -webkit-animation: ui-spinner-rotate-left 3s infinite;
+    animation: ui-spinner-rotate-left 3s infinite;
+    -webkit-transform-origin: 0 50% 0;
+    transform-origin: 0 50% 0;
+  }
+  .left .anim {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+  }
+  .right .anim {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    left: -100%;
+    -webkit-transform-origin: 100% 50% 0;
+    transform-origin: 100% 50% 0;
+  }  
+}
+
+@keyframes ui-spinner-rotate-right{
+  0%{transform:rotate(0deg)}
+  25%{transform:rotate(180deg)}
+  50%{transform:rotate(180deg)}
+  75%{transform:rotate(360deg)}
+  100%{transform:rotate(360deg)}
+}
+@keyframes ui-spinner-rotate-left{
+  0%{transform:rotate(0deg)}
+  25%{transform:rotate(0deg)}
+  50%{transform:rotate(180deg)}
+  75%{transform:rotate(180deg)}
+  100%{transform:rotate(360deg)}
+}
+@-webkit-keyframes ui-spinner-rotate-right{
+  0%{-webkit-transform:rotate(0deg)}
+  25%{-webkit-transform:rotate(180deg)}
+  50%{-webkit-transform:rotate(180deg)}
+  75%{-webkit-transform:rotate(360deg)}
+  100%{-webkit-transform:rotate(360deg)}
+}
+@-webkit-keyframes ui-spinner-rotate-left{
+  0%{-webkit-transform:rotate(0deg)}
+  25%{-webkit-transform:rotate(0deg)}
+  50%{-webkit-transform:rotate(180deg)}
+  75%{-webkit-transform:rotate(180deg)}
+  100%{-webkit-transform:rotate(360deg)}
 }
