--- a/assets/scss/layout/_l-seminar.scss
+++ b/assets/scss/layout/_l-seminar.scss
@@ -73,6 +73,9 @@
       padding: 10px 20px;
       font-size: 14px;
       border: solid 1px $palette-gray;
+      ul {
+        padding-left: 20px;
+      }
     }
   }
   &__memo {
